# somachron

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  LICENSE-AGPL  LICENSE-APACHE  README.md  build.rs  client.md  rustfmt.toml  smq.Dockerfile  somachron.Dockerfile  somarift.Dockerfile
lib-core/: Cargo.toml
lib-core/src/: auth.rs  clerk.rs  config.rs  extensions.rs  google.rs  interceptor.rs  interconnect.rs  lib.rs  media.rs  r2.rs  s3.rs  storage.rs
lib-core/src/storage/: media.rs  mod.rs  s3.rs
lib-domain/: Cargo.toml
lib-domain/migrations/: 20250629053648_init_db.sql
lib-domain/src/: extension.rs  lib.rs
lib-domain/src/datastore/: mod.rs  native_app.rs  space.rs  statements.rs  storage.rs  user.rs  user_space.rs
lib-domain/src/dto/: auth.rs  cloud.rs  mod.rs  native_app.rs  space.rs  user.rs
lib-domain/src/service/: auth.rs  cloud.rs  media.rs  mod.rs  space.rs  user.rs  user_space.rs
lib-migrations/: Cargo.toml
lib-migrations/migrations/: 20250720042218_allowed_users.sql  20250930101412_init_db.sql  20251021140212_native_app.sql  20260228173446_default_space.sql  20260301062717_fs_node_non_null_user_id.sql  20260301074622_fs_node_media_status.sql  20260308152038_fs_node_media_hash.sql  20260308154259_fs_node_hash_index.sql  20260322101000_media_album_hard_cutover.sql
lib-migrations/src/: lib.rs
smq-dto/: Cargo.toml
smq-dto/src/: lib.rs
somachron/: Cargo.toml
somachron-media-queue/: Cargo.toml
somachron-media-queue/src/: media.rs  routes.rs  server.rs
somachron-media-queue/src/mq/: broadcast.rs  mod.rs  pool.rs
somachron/src/: app.rs  main.rs  server.rs
somachron/src/routes/: auth.rs  cloud.rs  media.rs  mod.rs  space.rs  user.rs
somachron/src/routes/middleware/: auth.rs  cloud.rs  mod.rs  space.rs
somarift/: Cargo.toml
somarift-media-queue/: Cargo.toml
somarift-media-queue/src/: main.rs  routes.rs
somarift-media-queue/src/mq/: mod.rs  pool.rs
somarift/src/: main.rs
somarift/src/routes/: media.rs  mod.rs  space.rs  user.rs
somarift/src/routes/middleware/: space.rs
src/: app.rs  main.rs  server.rs
src/routes/: auth.rs  cloud.rs  health.rs  mod.rs  space.rs  user.rs
src/routes/middleware/: auth.rs  mod.rs  space.rs
surrealdb/: Dockerfile
thumbnail-output/: Cargo.toml
thumbnail-output/src/: lib.rs
thumbnailer/: Cargo.toml
thumbnailer/src/: err.rs  main.rs  media.rs
