[workspace]
resolver = "3"
members = [
    "lib-core",
    "lib-domain",
    "lib-migrations",
    "somachron",
    "thumbnailer",
]
default-members = ["somachron"]

[workspace.dependencies]
tokio = { version = "=1.45.1", features = ["full"] }

axum = { version = "0.8.4", features = ["macros", "multipart"] }
tracing = "0.1.40"

utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

sonic-rs = "0.5.3"
serde = { version = "1.0", features = ["derive"] }
validator = { version = "0.20.0", features = ["derive"] }

chrono = { version = "0.4", features = ["serde"] }
nanoid = "0.4.0"
