[workspace]
resolver = "3"
members = ["lib-core", "lib-domain", "lib-migrations", "somachron", "somachron-media-queue", "smq-dto"]
default-members = ["somachron"]

[workspace.dependencies]
tokio = { version = "=1.45.1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }

axum = { version = "0.8.4", features = ["macros", "multipart"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
reqwest = { version = "0.13", features = ["json", "stream"] }

utoipa = { version = "5.4.0", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

serde_json = "1.0.141"
serde = { version = "1.0", features = ["derive"] }
validator = { version = "0.20.0", features = ["derive"] }

chrono = { version = "0.4", features = ["serde"] }
nanoid = "0.4.0"
uuid = { version = "1.18.1", features = ["v7", "serde"] }
