[package]
name = "lib-core"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv_codegen = "0.15.0"

tokio = { workspace = true }

axum = { workspace = true }
tracing = { workspace = true }

reqwest = { version = "0.12", features = ["json"] }

serde_json = { workspace = true }
serde = { workspace = true }
validator = { workspace = true }
utoipa = { workspace = true }

backtrace = "0.3.75"
nanoid = { workspace = true }
jsonwebtoken = "9.3.0"
chrono = { workspace = true }

# storage
aws-sdk-s3 = { version = "=1.91.0", features = [
    "rt-tokio",
    "behavior-version-latest",
] }
aws-config = { version = "=1.8.0", features = ["behavior-version-latest"] }

infer = "0.19.0"
image = "0.25.6"
nom-exif = { version = "2.5.4", features = ["async"] }
exiftool = "0.2.5"
ffmpeg-next = { version = "7.1.0" }
libheif-rs = { version = "2.2.0", features = ["v1_19"] }
