[package]
name = "lib-core"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
tokio-util = { version = "0.7.15", features = ["io"] }

axum = { workspace = true }
tracing = { workspace = true }

reqwest = { version = "0.12", features = ["json"] }

serde_json = { workspace = true }
serde = { workspace = true }
validator = { workspace = true }
utoipa = { workspace = true }

futures = "0.3.31"
nanoid = { workspace = true }
jsonwebtoken = "9.3.0"
chrono = { workspace = true }

# storage
aws-sdk-s3 = { version = "=1.91.0", features = [
    "rt-tokio",
    "behavior-version-latest",
] }
aws-config = { version = "=1.8.0", features = ["behavior-version-latest"] }

infer = "0.19.0"
exiftool = "0.2.5"
urlencoding = "2.1.3"
