[package]
name = "lib-core"
version = "0.1.0"
edition = "2024"

[dependencies]
smq-dto = { path = "../smq-dto" }

tokio = { workspace = true }
tokio-util = { version = "0.7.15", features = ["io"] }

axum = { workspace = true }
tracing = { workspace = true }

reqwest = { version = "0.12", features = ["json"] }

serde_json = { workspace = true }
serde = { workspace = true }
validator = { workspace = true }
utoipa = { workspace = true }

nanoid = { workspace = true }
jsonwebtoken = "9.3.0"
chrono = { workspace = true }
openssl = { version = "0.10", features = ["vendored"] }
base64 = "0.22.1"
uuid = { workspace = true }

# storage
aws-sdk-s3 = { version = "=1.91.0", features = [
    "rt-tokio",
    "behavior-version-latest",
] }
aws-config = { version = "=1.8.0", features = ["behavior-version-latest"] }

infer = "0.19.0"
urlencoding = "2.1.3"
