[package]
name = "lib-domain"
version = "0.1.0"
edition = "2024"

[dependencies]
lib-migrations = { path = "../lib-migrations" }
lib-core = { path = "../lib-core" }

tokio = { workspace = true }

serde = { workspace = true }
validator = { workspace = true }
ser_mapper = "0.2.1"

utoipa = { workspace = true }

# db
tokio-postgres = { version = "=0.7.13", features = [
    "with-chrono-0_4",
    "with-serde_json-1",
] }
postgres-types = { version = "0.2.9", features = ["derive"] }
chrono = { workspace = true }
nanoid = { workspace = true }
