[package]
name = "lib-domain"
version = "0.1.0"
edition = "2024"

[dependencies]
lib-core = { path = "../lib-core" }

tokio = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
validator = { workspace = true }
ser_mapper = "0.3.1"

utoipa = { workspace = true }

# db
surrealdb = "2.3.7"
chrono = { workspace = true }
nanoid = { workspace = true }
