[package]
name = "lib-domain"
version = "0.1.0"
edition = "2024"

[dependencies]
lib-core = { path = "../lib-core" }
lib-migrations = { path = "../lib-migrations" }

tokio = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
validator = { workspace = true }
ser_mapper = "0.3.1"

utoipa = { workspace = true }

# db
tokio-postgres = { version = "=0.7.14", features = [
    "with-chrono-0_4",
    "with-serde_json-1",
    "with-uuid-1",
] }
chrono = { workspace = true }
nanoid = { workspace = true }
uuid = { workspace = true }
