[package]
name = "somachron-media-queue"
version = "0.1.0"
edition = "2024"

[dependencies]
lib-core = { path = "../lib-core" }
smq-dto = { path = "../smq-dto" }

tokio = { workspace = true }
tokio-stream = { workspace = true }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
reqwest = { workspace = true }

axum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }

dotenv = "0.15.0"
uuid = { workspace = true }

infer = "0.19.0"
image = "0.25.6"

serde_json = { workspace = true }
serde = { workspace = true }

libc = "0.2.174"
ffmpeg-next = { version = "8" }
libheif-rs = { version = "2.5.2", features = ["v1_20"] }

[profile.release]
codegen-units = 1
lto = "thin"
strip = true
