[package]
name = "somachron"
version = "0.1.0"
edition = "2024"

[dependencies]
lib-core = { path = "../lib-core" }
lib-domain = { path = "../lib-domain" }

libc = "0.2.174"
tokio = { workspace = true }

axum = { workspace = true }
tower-http = { version = "0.6.6", features = ["fs"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

sonic-rs = { workspace = true }

utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }

dotenv = "0.15.0"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

[profile.release]
codegen-units = 1
lto = "thin"
