[package]
name = "somachron"
version = "0.1.0"
edition = "2024"

[dependencies]
lib-core = { path = "../lib-core" }
lib-domain = { path = "../lib-domain" }

tokio = { workspace = true }

axum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }

dotenv = "0.15.0"
uuid = { workspace = true }

[profile.release]
codegen-units = 1
lto = "thin"
strip = true
