[package]
name = "thumbnailer"
version = "0.1.0"
edition = "2024"

[dependencies]
thumbnail-output = { path = "../thumbnail-output" }
clap = { version = "4.5.41", features = ["derive"] }

infer = "0.19.0"
image = "0.25.6"

serde_json = { workspace = true }
serde = { workspace = true }

ffmpeg-next = { version = "8" }
libheif-rs = { version = "2.5.2", features = ["v1_20"] }

[profile.release]
codegen-units = 1
lto = "thin"
